Browsers tests should not be first, as some may think CPU-audio is bugged, instead of Chrome or Safari missing implementations

--- a/tests-browser.html
+++ b/tests-browser.html
@@ -11,16 +11,16 @@
 	<p><a href=".">CPU-Audio Webcomponent</a></p>
 
 	<p>
-		This is the browser tests. Your browser may fail some tests, but the webcomponent may work even not degraded.
+		Those are some browser tests. <strong>Your browser may fail some tests, this is <q>normal</q></strong>, but the webcomponent may work even not degraded.
 	</p>
 	<p>
 		See also :
 	</p>
 	<ul>
-		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 		<li><a href="./tests-minimal.html">Minimum services, as hash links</a></li>
 		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
 		<li><a href="./tests-api.html">API</a></li>
+		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 	</ul>
 
 	<cpu-audio>
