--- a/live_chapters.html
+++ b/live_chapters.html
@@ -1,8 +1,8 @@
 <!--
 
 TODO
-- draggable cursor . Continue https://www.kirupa.com/html5/drag.htm . Must have CPU fire standards event "createplane", "removeplane", "editplane", "clickplane" , "createpoint", "removepoint", "editpoint", "clickpoint"
-    let event = new Event('create_point',{ plane_name, point_name, shadowTarget  });
+- draggable cursor . Continue https://www.kirupa.com/html5/drag.htm . 
+- click on the timeline to create a point
 - remove the function system on link parameter
 - export .csv 
 -->
