--- a/live_chapters.html
+++ b/live_chapters.html
@@ -455,14 +455,13 @@ function interpret_form(_event) {
     document.querySelector('#vtt_source').open = true;
 }
 
-window.addEventListener('load', function(){
+document.addEventListener('DOMContentLoaded', function(){
     document.location.hash = '#configure';
 
     sound_element = document.getElementById('sound');
     list_element = document.getElementById('list');
     component_element = sound_element.closest('cpu-audio');
-    // sometimes not fired at time, perhaps we need a CPULoaded event ?
-    sound_CPU = sound_element.CPU_controller().CPU;
+
     edit_source_audio_element = document.getElementById('source_audio');
     edit_source_waveform_element = document.getElementById('source_waveform');
     edit_source_webvtt_element = document.getElementById('source_webvtt');
@@ -482,28 +481,32 @@ window.addEventListener('load', function(){
     document.getElementById('add').addEventListener('click', add_line);
     list_element.addEventListener('click', check_for_actions);
 
-    sound_CPU.add_plane('cursors', 'Chapters preview', {track   : 'cursors', panel   : true});
-    sound_CPU.inject_css('cursors', `
-        .cursors {
-            left: -6px;
-        }
-        .cursors .with-preview {
-            outline : white 4px solid;
-            z-index : 10;
-        }
-        .cursors a {
-            width: 11px;
-            height: 21px;
-            position: absolute;
-            display : block;
-            touch-action: none;
-            user-select: none;
-        }
-        .cursors img {
-            width: 11px;
-            height: 21px;
-        }
-    `);
+    document.addEventListener('CPU_ready', e => {
+        // sometimes not fired, so we needed a "ready" event
+        sound_CPU = sound_element.CPU_controller().CPU;
+        sound_CPU.add_plane('cursors', 'Chapters preview', {track   : 'cursors', panel   : true});
+        sound_CPU.inject_css('cursors', `
+            .cursors {
+                left: -6px;
+            }
+            .cursors .with-preview {
+                outline : white 4px solid;
+                z-index : 10;
+            }
+            .cursors a {
+                width: 11px;
+                height: 21px;
+                position: absolute;
+                display : block;
+                touch-action: none;
+                user-select: none;
+            }
+            .cursors img {
+                width: 11px;
+                height: 21px;
+            }
+        `);
+    });
 
 });
 </script>
