Better parameters in addEventListener

--- a/live_chapters.html
+++ b/live_chapters.html
@@ -22,14 +22,17 @@ TODO
         </fieldset>
 
         <fieldset>
-            <label for="source_waveform">
-                <span>(optional) : URL waveform image</span>
-                <input id="source_waveform" name="source_waveform" type="url" />
-            </label>
             <label for="source_webvtt">
                 <span>(optional) : URL WebVTT track to re-edit</span>
                 <input id="source_webvtt" name="source_webvtt" type="url" />
             </label>
+
+            <label for="source_waveform">
+                <span>(optional) : URL waveform image</span>
+                <!-- Is there any JS lib to create it on the fly ? -->
+                <input id="source_waveform" name="source_waveform" type="url" />
+            </label>
+
         </fieldset>
 
         <fieldset class="actions">
