--- a/live_chapters.html
+++ b/live_chapters.html
@@ -251,7 +251,6 @@ function check_for_actions(event) {
                 interpret_line(this_line_element);
                 break ;
             case 'remove' :
-                console.log('remove')
                 sound_CPU.remove_point('cursors', this_line_element.id);
                 this_line_element.remove();
                 event.preventDefault();
@@ -458,7 +457,7 @@ function interpret_form(_event) {
     document.querySelector('#vtt_source').open = true;
 }
 
-document.addEventListener('DOMContentLoaded', function(){
+document.addEventListener('DOMContentLoaded', e => {
     document.location.hash = '#configure';
 
     sound_element = document.getElementById('sound');
@@ -483,35 +482,36 @@ document.addEventListener('DOMContentLoaded', function(){
     new_chapter_line = document.querySelector('p.line').innerHTML;
     document.getElementById('add').addEventListener('click', add_line);
     list_element.addEventListener('click', check_for_actions);
-
-    document.addEventListener('CPU_ready', e => {
-        // sometimes not fired, so we needed a "ready" event
-        sound_CPU = sound_element.CPU_controller().CPU;
-        sound_CPU.add_plane('cursors', 'Chapters preview', {track   : 'cursors', panel   : true});
-        sound_CPU.inject_css('cursors', `
-            .cursors {
-                left: -6px;
-            }
-            .cursors .with-preview {
-                outline : white 4px solid;
-                z-index : 10;
-            }
-            .cursors a {
-                width: 11px;
-                height: 21px;
-                position: absolute;
-                display : block;
-                touch-action: none;
-                user-select: none;
-            }
-            .cursors img {
-                width: 11px;
-                height: 21px;
-            }
-        `);
-    });
-
 });
+
+document.addEventListener('CPU_ready', e => {
+    // sometimes not fired, so we needed a "ready" event
+    sound_CPU = sound_element.CPU_controller().CPU;
+    sound_CPU.add_plane('cursors', 'Chapters preview', {track   : 'cursors', panel   : true});
+    sound_CPU.inject_css('cursors', `
+        .cursors {
+            left: -6px;
+        }
+        .cursors .with-preview {
+            outline : white 4px solid;
+            z-index : 10;
+        }
+        .cursors a {
+            width: 11px;
+            height: 21px;
+            position: absolute;
+            display : block;
+            touch-action: none;
+            user-select: none;
+        }
+        .cursors img {
+            width: 11px;
+            height: 21px;
+        }
+    `);
+});
+
+
 </script>
 
 <style>
