Move tests in their own subdir

--- a/tests/tests-browser.html
+++ b/tests/tests-browser.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>cpu-audio tests browser</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="tests/qunit.css">
+	<link rel="stylesheet" href="./qunit.css">
 </head>
 <body>
 
@@ -17,22 +17,22 @@
 		See also :
 	</p>
 	<ul>
-		<li><a href="./tests-minimal.html">Minimum services, as hash links</a></li>
-		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
-		<li><a href="./tests-api.html">API</a></li>
-		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
+		<li><a href="../tests-minimal.html">Minimum services, as hash links</a></li>
+		<li><a href="../tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
+		<li><a href="../tests-api.html">API</a></li>
+		<li><a href="../tests-browser.html">Browser compliance and implementation tests</a></li>
 	</ul>
 
 	<cpu-audio>
 		<audio id="track" controls="controls" preload="auto" muted="muted">
-			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
+			<source src="../tests-assets/blank.mp3" type="audio/mpeg" />
 		</audio>
 	</cpu-audio>
 
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
-	<script src="tests/qunit.js"></script>
-	<script src="tests/tests-browser.js"></script>
+	<script src="./qunit.js"></script>
+	<script src="./tests-browser.js"></script>
 
 
 </body>
